--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
 <body>
     <div class="col">
     <div class="row">
-    <div class="col white">
+    <div class="col" style="color:white">
     <div>Follow your interests.</div>
     <div>Hear what people are talking about.</div>
     <div>Join the conversation.</div>
@@ -18,12 +18,12 @@
     <img src="https://www.lter-europe.net/document-archive/image-gallery/albums/logos/TwitterLogo_55acee.png/image" alt="Bird" width="50px" height="50px">
     <div>See what’s happening in the world right now</div>
     <div>Join Twitter today.</div>
-    <button class="whitebtn">Sign Up</button>
-    <button class="bluebtn">Log in</button>
+    <button class="btnblue">Sign Up</button>
+    <button class="btnwhite">Log in</button>
     </div>
 </div>
     <div class="col">
-        <div>About
+        <div class="row">About
             Help Center
             Terms of Service
             Privacy Policy
@@ -39,7 +39,7 @@
             Developers
             Directory
             Settings</div>
-            <div>© 2021 Twitter, Inc.</div>
+            <div class="row">© 2021 Twitter, Inc.</div>
     </div>
 </div>
 </body>
